--- a/base/BUILD
+++ b/base/BUILD
@@ -10,3 +10,27 @@ cc_library(
     ],
     linkstatic = 1,
 )
+
+cc_library(
+    name = "test",
+    srcs = ["test.cc"],
+    hdrs = ["test.h"],
+    deps = [
+        ":base",
+        "//third_party/gmock",
+    ],
+    testonly = 1,
+    linkstatic = 1,
+)
+
+cc_library(
+    name = "test_main",
+    srcs = ["test_main.cc"],
+    hdrs = ["test_main.h"],
+    deps = [
+        ":test",
+        "//third_party/gmock:gmock_main",
+    ],
+    testonly = 1,
+    linkstatic = 1,
+)
